[Refactor] Removed unused test classes, redundant dependencies, and legacy fields while improving assertion coverage in test cases and aligning with modern API usage.