@@ -1,11 +1,7 @@
 package com.github.silent.samurai.speedy.url;
 
-import com.github.silent.samurai.speedy.SpeedyFactory;
 import com.github.silent.samurai.speedy.TestApplication;
 import com.github.silent.samurai.speedy.client.SpeedyQuery;
-import com.github.silent.samurai.speedy.repositories.CategoryRepository;
-import com.github.silent.samurai.speedy.repositories.ProductRepository;
-import jakarta.persistence.EntityManagerFactory;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -13,8 +9,6 @@ import org.openapitools.client.ApiClient;
 import org.openapitools.client.api.CategoryApi;
 import org.openapitools.client.api.ProductApi;
 import org.openapitools.client.model.*;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -22,7 +16,6 @@ import org.springframework.test.web.client.MockMvcClientHttpRequestFactory;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static com.github.silent.samurai.speedy.client.SpeedyQuery.condition;
@@ -31,20 +24,6 @@ import static com.github.silent.samurai.speedy.client.SpeedyQuery.eq;
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.MOCK, classes = TestApplication.class)
 @AutoConfigureMockMvc(addFilters = false)
 class SpeedyAssociationTest {
-
-    private static final Logger LOGGER = LoggerFactory.getLogger(SpeedyAssociationTest.class);
-
-    @Autowired
-    EntityManagerFactory entityManagerFactory;
-
-    @Autowired
-    SpeedyFactory speedyFactory;
-
-    @Autowired
-    CategoryRepository categoryRepository;
-
-    @Autowired
-    ProductRepository productRepository;
 
     ApiClient defaultClient;
     @Autowired
@@ -58,22 +37,22 @@ class SpeedyAssociationTest {
     }
 
     @Test
-    void createCategory() throws Exception {
+    void createCategory() {
         CategoryApi apiInstance = new CategoryApi(defaultClient);
-        List<CreateCategoryRequest> postCategories = Arrays.asList(
+        List<CreateCategoryRequest> postCategories = List.of(
                 new CreateCategoryRequest().name("new-cat-1"),
                 new CreateCategoryRequest().name("new-cat-2")
-        ); // List<PostCategory> | Fields needed for creation
+        );
         apiInstance.bulkCreateCategory(postCategories);
     }
 
 
     @Test
-    void createProduct() throws Exception {
+    void createProduct() {
         CategoryApi categoryApi = new CategoryApi(defaultClient);
-        List<CreateCategoryRequest> postCategories = Arrays.asList(
+        List<CreateCategoryRequest> postCategories = List.of(
                 new CreateCategoryRequest().name("New Category")
-        ); // List<PostCategory> | Fields needed for creation
+        );
         BulkCreateCategoryResponse categoryResponse = categoryApi.bulkCreateCategory(postCategories);
 
         Assertions.assertNotNull(categoryResponse);
